[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Assets/Disc Golf Basket/basket.png" type="Texture" id=1]
[ext_resource path="res://entities/Assets/Disc Golf Basket/DiscGolfBasket.gd" type="Script" id=2]
[ext_resource path="res://audio/sound effects/coin/BottleSound.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.2203, 35.4095 )

[sub_resource type="Animation" id=2]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="DiscGolfBasket" type="Area2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.128513, -3.08119 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BottleSound" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="." to="." method="_on_DiscGolfBasket_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
